--- a/dnd/frontend/src/index.css
+++ b/dnd/frontend/src/index.css
@@ -1,9 +1,6 @@
-body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-  }
-.testing1 {
+.container {
+    padding: 10px;
     color: black;
-    background-color: aqua;
+    background-color: rgb(255, 170, 91);
     border-radius: 10px;
 }
